--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Component Library</title>
 </head>
 
@@ -25,19 +26,19 @@
     <h2>@containers</h2>
 
     <h3>@fluid container</h3>
-    <div>
+    <div class=" container ">
         This is going to be fluid container. it will go full width of page with some margin
     </div>
 
     <h3>@center container</h3>
-    <div>
+    <div class="container container-center">
         This is going to be a center container. It will go till a given width and center content.
     </div>
     <hr>
 
     <h2>@links</h2>
     
-    <a href="/">Primary link</a>
+    <a class="link link-primary" href="/">Primary link</a>
     <a href="/">Secondary link</a>
     
     <hr>
