--- a/AI-vs-UI.html
+++ b/AI-vs-UI.html
@@ -49,7 +49,8 @@
                     Yes if the student is ready to Pursue till Phd and this also in good universities in foreign lands.
                     No if student don’t want to do this much in AI field because UI is proving itself a great carrier by the advancement in UI because of Javascript
                     <br>
-                    But AI really do have better future than UI in technology
+                    But is AI really do have better future than UI in technology?
+                    <br>
                     Answer is no there is no technology ever to survive more than 10-15 years as there are changes and better technologies to come . 
                     UI is having good time currently and AI do have too but For current time UI shows better future jobs in india until AI is valued in India BY companies.
                     So What do you think ?
