--- a/AI-vs-UI.html
+++ b/AI-vs-UI.html
@@ -33,11 +33,11 @@
         
         <div class="container container-center">
                 
-                <p> People say AI is the new UI do you agree
-
+                <p> People say AI is the new UI do you agree?
+                    <br> 
                     Lets see what is UI and AI first,
                     In simple words,
-                     UI ( User interface ) is the space where interactions between humans and machines occur.
+                     UI ( User interface ) is the space where interactions between humans and machines occur whereas
                     AI (Artificial intelligence) is intelligence demonstrated by machines , unlike the natural intelligence displayed by humans.
                 </p>    
                     <img class="hero-img " src="/images/ai.jpg" alt="image"/>
@@ -46,8 +46,8 @@
                     For future of current students there is a big question is AI is good for there profession?
                     And the answer is both yes and no 
                     <br>
-                    Yes if the student is ready to Pursue till Phd and this also in good universities in foreign lands.
-                    No if student don’t want to do this much in AI field because UI is proving itself a great carrier by the advancement in UI because of Javascript
+                    Yes, if the student is ready to Pursue till Phd and this also in good universities in foreign lands.
+                    No, if student don’t want to do this much in AI field because UI is proving itself a great carrier by the advancement in UI because of Javascript.
                     <br>
                     But is AI really do have better future than UI in technology?
                     <br>
