--- a/AI-vs-UI.html
+++ b/AI-vs-UI.html
@@ -66,7 +66,7 @@
         </div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://ajinkyajagdale21@gmail.com">Mail</a>
+                <a class="link" href="https://www.linkedin.com/in/ajinkya-h-jagadale-78a899200">LinkedIn</a>
             </li>
             <li  class="list-item-inline">
                 <a class="link" href="https://instagram.com/ajinkyajagdale21">Instagram</a>
