--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
             <li> 
                 <h1>Emoji Genius</h1> 
                 <small>11 December,2020</small>
-                <p>An App that helps to know the meaning of animal face emoji <strong>React Js</strong> Created with CodeSandbox </p>       
+                <p>App that helps to identify the meaning of animal face emoji. it is build using <strong>React Js</strong> & is Created with CodeSandbox </p>       
                
                 <a class="link link-primary" href="https://u6bfn.csb.app/">View Live</a>
                 <a class="link link-secondary" href="https://github.com/ajinkyajagdale21/emoji-interpreter">Source Code</a>
