update: added reaction game project

--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,18 @@
 
         <div class="container container-center">
             <li> 
+                <h1>Reaction Game</h1> 
+                <small>27 January,2021</small>
+                <p>Reaction Game WebApp made using <strong>React JS</strong>,this WebApp checks Your Reaction Speed, on clicking the text button according to the number represented. </p>       
+          
+                <a class="link link-primary" href="https://aj21-reaction-game.netlify.app/">View Live</a>
+                <a class="link link-secondary" href="https://github.com/ajinkyajagdale21/reaction-game">Source Code</a>
+            </li>
+        </div>
+
+
+        <div class="container container-center">
+            <li> 
                 <h1>Calculator</h1> 
                 <small>14 January,2021</small>
                 <p>Calculator WebApp app build using <strong>React JS</strong>, this WebApp has all the functionalities of Good basic Calculators. </p>       
