--- a/blogs.html
+++ b/blogs.html
@@ -33,14 +33,10 @@
         
         <div class="container container-center">
             <li> 
-                <h1>React (Basics)</h1> 
-                <small>12 November,2020</small>
+                <h1>Mongoose</h1> 
+                <small>18,4,2021</small>
                 <p>
-                    components look like HTML templates(JSX). They can contain 'state' (data or UI).
-                     They also contain JS for functionality. react's job is to collect them & enject them to Dom.
-                      it renders Virtual DOM..............
-
-
+                    Mongoose is an Object Data Modeling (ODM) library for MongoDB and NodeJS.......
                 </p>       
                 <a class="link link-primary" href="./react.html">Read More</a>
             </li>
