--- a/blogs.html
+++ b/blogs.html
@@ -38,7 +38,7 @@
                 <p>
                     Mongoose is an Object Data Modeling (ODM) library for MongoDB and NodeJS.......
                 </p>       
-                <a class="link link-primary" href="./react.html">Read More</a>
+                <a class="link link-primary" href="./mongoose.html">Read More</a>
             </li>
          </div>
     
