--- a/mongoose.html
+++ b/mongoose.html
@@ -38,10 +38,11 @@
                     out of the box.
                 </p>
                 <br>
-                <h3>Installing<h3>
+                <h3>//Installing<h3>
                 <p>const express=require('express')<br>const app= express(); <br>const mongoose= require('mongoose')<p>
-                <h3>Connect</h3>
-                <p></p>          
+                <h3>//Connect</h3>
+                <p>mongoose.connect('YOUR CONNECTION',{useUnifiedTopology: true,
+                    useNewUrlParser: true,})<br>.then(()=>console.log('connection Successfull'))<br>.catch(()=>console.log('not succesful'))</p>          
         </div>
     
 
