--- a/mongoose.html
+++ b/mongoose.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>React Basics</title>
+    <title>Mongoose</title>
 </head>
 <body>
     
@@ -38,11 +38,11 @@
                     out of the box.
                 </p>
                 <br>
-                <h3>//Installing<h3>
+                <h3>//Installing</h3>
                 <p>const express=require('express')<br>const app= express(); <br>const mongoose= require('mongoose')<p>
                 <h3>//Connect</h3>
-                <p>mongoose.connect('YOUR CONNECTION',{useUnifiedTopology: true,
-                    useNewUrlParser: true,})<br>.then(()=>console.log('connection Successfull'))<br>.catch(()=>console.log('not succesful'))</p>          
+                <p>mongoose.connect (' YOUR CONNECTION ',{ useUnifiedTopology: true,
+                    useNewUrlParser: true, })<br> .then( () =>console.log('connection Successfull'))<br> .catch( () =>console.log('not succesful'))</p>          
         </div>
     
 
