--- a/mongoose.html
+++ b/mongoose.html
@@ -42,7 +42,19 @@
                 <p>const express=require('express')<br>const app= express(); <br>const mongoose= require('mongoose')<p>
                 <h3>//Connect</h3>
                 <p>mongoose.connect (' YOUR CONNECTION ',{ useUnifiedTopology: true,
-                    useNewUrlParser: true, })<br> .then( () =>console.log('connection Successfull'))<br> .catch( () =>console.log('not succesful'))</p>          
+                    useNewUrlParser: true, })<br> .then( () =>console.log('connection Successfull'))<br> .catch( () =>console.log('not succesful'))
+                </p>
+                <h3>//Schema</h3>
+                <p>const ProductSchema = new mongoose.Schema({name: String, price: Number})</p>
+                <h3>//Model</h3>
+                <p>const Product = mongoose.model('Product',ProductSchema)</p>
+                <h3>//Read</h3>
+                <p>app.get('/Products',async(req,res)=>{ <br> try{ <br> 
+                   const products = await Product.find({}); <br>
+                   res.json({success:true,products})
+                
+                } })</p>
+
         </div>
     
 
