--- a/mongoose.html
+++ b/mongoose.html
@@ -58,7 +58,7 @@
                   }<br>
                 }) 
                 </p>
-                <h3>Update</h3>
+                <h3>//Update</h3>
                 <p>app.post('/products',async(req,res)=>{<br>
                     try{<br>
                       const product= req.body<br>
